# scratchbase

./: CMakeLists.txt  performance-benchmarks.txt  scratchbase.pro
highwayhash/: deps.mk
samples/: CMakeLists.txt
samples/003a-hashing-benefits/: main.cpp
scratchbase/: CMakeLists.txt  Defines.pri  scratchbase.h  scratchbase.pro  scratchbaseext.h
scratchbase-cli/: CMakeLists.txt  main.cpp
scratchbase-tests/: CMakeLists.txt  dbmanagement-tests.cpp  hashing-tests.cpp  keyvalue-tests.cpp  performance-tests.cpp  scratchbase-tests.pro  tests.h
scratchbase/include/: database.h  scratchbase.h
scratchbase/include/extensions/: extdatabase.h  highwayhash.h
scratchbase/src/: database.cpp  filekeyvaluestore.cpp  highwayhash.cpp  memorykeyvaluestore.cpp  scratchbase.cpp
